infra-terraform/vpc.tf
resource "aws_vpc" "vpc_docusmart" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc_docusmart.id
}
